# order-api-backend

./: .gitignore  CMakeLists.txt  Dockerfile  LICENSE  README.md  docker-compose.yml  main.cpp  note.txt  old.cpp  order.db  orders.db  prometheus.yml
.github/workflows/: build.yml
include/: auth_middleware.h  crow_all.h  helpers.hpp  metrics.h  order_routes.h  runtime_config.h  service_state.h
logs/: .gitignore
scripts/: load_demo.ps1
src/: beforeLog.cpp  main.cpp  order_routes.cpp
test/: CMakeLists.txt  test_endpoints.cpp  test_helpers.cpp  test_main.cpp
